# b2w-crypto-tg-bot

./: .gitignore  Dockerfile  README.md  alembic.ini  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  tree.txt
app/: celery_config.py  main.py
app/adapters/: GMX_adapter.py  Uniswap_adapter.py  base.py  dYdX_adapter.py
app/airdrop/: __init__.py  engine.py  rules.py
app/api/: dependencies.py  health.py  main.py  middleware.py  websocket.py
app/auth/: jwt.py
app/bot/: app.py  keyboards.py
app/cache/: manager.py
app/config/: settings.py
app/core/: __init__.py  enums.py  exceptions.py
app/dashboard/: event_logger.py  service.py
app/database/: manager.py
app/models/: __init__.py  airdrop.py  base.py  dashboard.py  payment.py  subscription.py  trading.py  user.py
app/payments/: __init__.py  invoice.py  verifier.py
app/services/: action_queue_service.py  alerting_service.py  risk_service.py  subscription_service.py  wallet_connect.py  wallet_service.py
app/tasks/: airdrop_tasks.py  dashboard_tasks.py  payment_tasks.py  risk_tasks.py
app/trading/: __init__.py  orchestrator.py  price_feed.py
docs/: api_reference.md  architecture.md  assumptions.md  deployment.md
k8s/: autoscaling.yaml  celery-deployment.yaml  config.yaml  deployment.yaml  ingress.yaml  namespace.yaml  storage.yaml
tests/: conftest.py
tests/contract/: __init__.py
tests/integration/: test_database.py  test_subscription_flow.py
tests/unit/: test_airdrop.py  test_auth.py  test_payment.py  test_risk_service.py  test_trading.py  (+1 more)
(+10 files in other folders)
